<resources>
    <string name="app_name">Astra</string>
    <string name="signup">SignUp</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="country">Country</string>
    <string name="signup_btn">SIGN UP</string>
    <string name="post_a_project">POST A PROJECT</string>
    <string name="do_a_project">DO A PROJECT</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_btn">SIGN IN</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="otp_login">OTP LOGIN</string>
    <string name="sign_in_with">Or Sign In With</string>
    <string name="sign_up">SIGN UP</string>
</resources>